# MRJP-projects

./: README.md
instant-compiler/instester/: stack.yaml
project-1/: .gitignore  README.md  instant.cabal  makefile
project-1/instester/: Tester.hs  instester.cabal
project-1/src/: CompilerLLVM.hs  Main.hs
project-1/src/bnfc/: AbsInstant.hs  LexInstant.hs  ParInstant.hs
project-1/src/jvm/: CompilerJVM.hs  Main.hs
project-1/src/llvm/: CompilerLLVM.hs  Main.hs
project-2/: .gitignore  README.md  latte.cabal  latte.cf  makefile  run.sh  test.lat  test.sh  test2.lat  test4.lat
project-2/lib/: runtime.c
project-2/src/: Common.hs  Main.hs  TypeChecker.hs
project-2/src/bnfc/: AbsLatte.hs  LexLatte.hs  ParLatte.hs
project-2/src/compiler/: Compiler.hs  ExprCompiler.hs  LLVMInstructions.hs  Optimizations.hs  StmtCompiler.hs  UtilsCompiler.hs
project-2/src/typeChecker/: ExprChecker.hs  StmtChecker.hs  TypeChecker.hs  UtilsTypeChecker.hs
project-2/src/type_checker/: Common.hs  ExprChecker.hs  StatementChecker.hs  StmtChecker.hs  TypeChecker.hs  UtilsTypeChecker.hs
