cabal-version:      3.4
name:               instant
version:            0.1.0.0

author:             Dominik Wawszczak
maintainer:         Dominik Wawszczak

executable insc_llvm
    main-is: Main.hs
    
    other-modules:
        AbsInstant,
        LexInstant,
        ParInstant,
        CompilerLLVM
    
    build-depends:
        array      ^>= 0.5.4.0,
        base       ^>= 4.15.1.0,
        containers ^>= 0.7,
        filepath   ^>= 1.4.2.1,
        mtl        ^>= 2.2.2,
        process    ^>= 1.6.13.2
    hs-source-dirs:   src/llvm, src/bnfc
    default-language: Haskell2010

executable insc_jvm
    main-is: Main.hs
    
    other-modules:
        AbsInstant,
        LexInstant,
        ParInstant,
        CompilerJVM
    
    build-depends:
        array ^>= 0.5.4.0,
        base  ^>= 4.15.1.0,
    hs-source-dirs:   src/jvm, src/bnfc
    default-language: Haskell2010
